--- a/extension-manifest-v3/src/_locales/ko/messages.json
+++ b/extension-manifest-v3/src/_locales/ko/messages.json
@@ -369,9 +369,6 @@
     "message": "기타",
     "description": "Tracker category name"
   },
-  "missing__pause_ghostery___you_can_find_it_in_your_privacy_protection_settings_": {
-    "message": "“모든 웹 사이트에서 Ghostery 사용 중지” 버튼을 찾고 계십니까? 개인정보 보호 설정에서 찾으실 수 있습니다."
-  },
   "modify_the_recommended_blocking_settings_for_every_website_": {
     "message": "모든 웹 사이트에 적용된 권장 설정 변경"
   },
@@ -414,9 +411,6 @@
   "on": {
     "message": "켜기"
   },
-  "open_ghostery_settings": {
-    "message": "Ghostery 설정 열기"
-  },
   "open_video": {
     "message": "동영상 보기"
   },
@@ -438,6 +432,12 @@
   },
   "pause_ghostery": {
     "message": "Ghostery 사용 잠시 멈추기"
+  },
+  "pause_on_this_site": {
+    "message": "이 사이트에서 일시 중지"
+  },
+  "paused": {
+    "message": "일시 중지됨"
   },
   "permission_required": {
     "message": "권한 필요함"
@@ -530,9 +530,6 @@
     "message": "웹 사이트 분석",
     "description": "Tracker category name"
   },
-  "site_is_trusted": {
-    "message": "웹 사이트 허용됨"
-  },
   "social_media": {
     "message": "소셜 미디어",
     "description": "Tracker category name"
@@ -597,9 +594,6 @@
   },
   "trust_on_this_website": {
     "message": "이 웹 사이트에서 허용됩니다."
-  },
-  "trust_this_site": {
-    "message": "이 웹 사이트 허용"
   },
   "trusted": {
     "message": "허용"
