--- a/extension-manifest-v3/src/_locales/de/messages.json
+++ b/extension-manifest-v3/src/_locales/de/messages.json
@@ -618,6 +618,9 @@
     "message": "Nicht identifiziert",
     "description": "Tracker category name"
   },
+  "updating___": {
+    "message": "aktualisieren..."
+  },
   "urls_blocked": {
     "message": "Blockierte URLs"
   },
