--- a/extension-manifest-v3/src/_locales/en/messages.json
+++ b/extension-manifest-v3/src/_locales/en/messages.json
@@ -618,6 +618,9 @@
     "message": "Unidentified",
     "description": "Tracker category name"
   },
+  "updating___": {
+    "message": "updating..."
+  },
   "urls_blocked": {
     "message": "URLs blocked"
   },
