--- a/extension-manifest-v3/src/_locales/es/messages.json
+++ b/extension-manifest-v3/src/_locales/es/messages.json
@@ -618,6 +618,9 @@
     "message": "Sin identificar",
     "description": "Tracker category name"
   },
+  "updating___": {
+    "message": "actualizando..."
+  },
   "urls_blocked": {
     "message": "URL bloqueadas"
   },
