--- a/extension-manifest-v3/src/_locales/it/messages.json
+++ b/extension-manifest-v3/src/_locales/it/messages.json
@@ -618,6 +618,9 @@
     "message": "Non identificato",
     "description": "Tracker category name"
   },
+  "updating___": {
+    "message": "aggiornamento in corso..."
+  },
   "urls_blocked": {
     "message": "URL bloccati"
   },
