--- a/extension-manifest-v3/src/_locales/pl/messages.json
+++ b/extension-manifest-v3/src/_locales/pl/messages.json
@@ -618,6 +618,9 @@
     "message": "Niezidentyfikowane",
     "description": "Tracker category name"
   },
+  "updating___": {
+    "message": "aktualizowanie..."
+  },
   "urls_blocked": {
     "message": "Zablokowane adresy URL"
   },
