--- a/extension-manifest-v3/src/_locales/pt_BR/messages.json
+++ b/extension-manifest-v3/src/_locales/pt_BR/messages.json
@@ -618,6 +618,9 @@
     "message": "Não identificado",
     "description": "Tracker category name"
   },
+  "updating___": {
+    "message": "atualizando..."
+  },
   "urls_blocked": {
     "message": "URLs bloqueados"
   },
