--- a/extension-manifest-v3/src/_locales/ru/messages.json
+++ b/extension-manifest-v3/src/_locales/ru/messages.json
@@ -618,6 +618,9 @@
     "message": "Неизвестно",
     "description": "Tracker category name"
   },
+  "updating___": {
+    "message": "обновление..."
+  },
   "urls_blocked": {
     "message": "Заблокированные URL-адреса"
   },
