--- a/extension-manifest-v3/src/_locales/zh_CN/messages.json
+++ b/extension-manifest-v3/src/_locales/zh_CN/messages.json
@@ -618,6 +618,9 @@
     "message": "未识别",
     "description": "Tracker category name"
   },
+  "updating___": {
+    "message": "更新中..."
+  },
   "urls_blocked": {
     "message": "已拦截 URL"
   },
